--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <a href="https://git.io/typing-svg">
                     <img id="typing-svg" src="https://readme-typing-svg.demolab.com?font=Kanit&weight=600&size=32&duration=1500&pause=1000&color=F7F7F7&width=435&lines=Ol%C3%A1%2C+eu+sou+o+Gabriel!;Desenvolvedor+front-end" alt="Typing SVG" />
                 </a>
-                <p>Frontend Developer with high-level experience in web design and development.</p>
-                <a href="#" class="btn">Contact Me</a>
+                <p>Sou Gabriel Cardoso, desenvolvedor front-end focado em criar interfaces responsivas e de alto desempenho. Com experiência em design e desenvolvimento web, busco transformar ideias em soluções inteligentes e funcionais🚀.</p>
+                <a href="#" class="btn">Vamos conectar?</a>
             </div>
             <div class="hero-image">
                 <img src="minhaFoto.jpeg" alt="Profile Image">
