alteração de descrições

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="header">
         <div class="logo">Gabriel</div>
         <nav class="nav">
-            <a href="#">Skills</a>
-            <a href="#">Services</a>
-            <a href="#">Portfólio</a>
-            <a href="#">Contact</a>
+            <a href="#">Tecnologias</a>
+            <a href="#">Competencias</a>
+            <a href="#">Projetos</a>
+            <a href="#">Contato</a>
         </nav>
         <div class="toggle-theme">☀️</div>
     </header>
