alteração de descrições

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <section class="hero">
             <div class="hero-text">
                 <a href="https://git.io/typing-svg">
-                    <img id="typing-svg" src="https://readme-typing-svg.demolab.com?font=Kanit&weight=600&size=32&duration=1500&pause=1000&color=F7F7F7&width=435&lines=Ol%C3%A1%2C+eu+sou+o+Gabriel!;Desenvolvedor+front-end" alt="Typing SVG" />
+                    <img id="typing-svg" src="https://readme-typing-svg.demolab.com?font=Kanit&weight=600&size=32&duration=1500&pause=1000&color=F7F7F7&width=435&lines=Ol%C3%A1%2C+eu+sou+o+Gabriel!;Desenvolvedor+Back-End" alt="Typing SVG" />
                 </a>
-                <p>Sou Gabriel Cardoso, desenvolvedor front-end focado em criar interfaces responsivas e de alto desempenho. Com experiência em design e desenvolvimento web, busco transformar ideias em soluções inteligentes e funcionais🚀.</p>
+                <p>Desenvolvedor Back-End focado em criar soluções robustas, escaláveis e de alto desempenho. Transformo ideias em sistemas funcionais e eficientes, com expertise em design e desenvolvimento de APIs, bancos de dados e arquiteturas otimizadas. Sempre buscando entregar performance e qualidade técnica🚀.</p>
+
                 <a href="#" class="btn">Vamos conectar?</a>
             </div>
             <div class="hero-image">
